Fri Nov 17 20:14:20 2000  Owen Taylor  <otaylor@redhat.com>

        * Released 1.3.2
	
	* NEWS: Updates for 1.3.2

2000-11-17  Tor Lillqvist  <tml@iki.fi>

	* gdk/gdkevents.h: Add comment that GdkXEvent isn't only for XEvent,
	but in general for window system specific events.

	* gtk/gtk.def
	* gtk/makefile.mingw.in
	* gtk/makefile.msc.in: Update.
	
	* gtk/gtktexttypes.h: Mark variables for export/import from DLL.

Thu Nov 16 16:11:39 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/Makefile.am (EXTRA_DIST): Do not, in any circumstances,
	distribute gtk.immodules.

	* gtk/Makefile.am (install-data-local): Don't install the
	gtk.immodules file created for the uninstalled modules;
	instead run gtk-query-immodules after install

Wed Nov 15 21:51:31 2000  Owen Taylor  <otaylor@redhat.com>

	* modules/input/Makefile.am (im_xim_la_LDFLAGS): Point
	-rpath to the right install location.

	* modules/input/Makefile.am (im_inuktitut_la_LDFLAGS): Remove
	-export-dynamic.

	* gtk/gtkthemes.c (gtk_theme_engine_get): Set engine->name
	properly.

2000-11-15  Havoc Pennington  <hp@pobox.com>

	* gtk/gtktextview.c (gtk_text_view_start_cursor_blink): Apply
	patch from Mikael Hermansson to temporarily stop blinking while
	the user is using the keyboard to type or navigate. 

	Also, when blinking, stay on for longer than we stay off. Also,
	return from start_cursor_blink if !cursor_visible, to save
	checking that flag all over the place before we call
	start_cursor_blink.

Thu Nov 16 01:25:51 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkrc.*: Remove the locale-specific gtkrc's, as they
	only contain a "fontset" line, which is now ignored.

	* gtk/gtkentry.c (gtk_entry_button_release): Make 
	double-click-to-select-word work.
	
Wed Nov 15 20:16:54 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_line_end): 
	Don't move back one char when we are actually at the end of the 
	paragraph.

2000-11-15  Robert Brady  <robert@suse.co.uk>
