@@ -1,3 +1,8 @@
+Sat Nov 18 11:45:09 2000  Owen Taylor  <otaylor@redhat.com>
+
+	* gtk/gtkcalendar.c: Patch from ChiDeok Hwang to fix
+	memleaks found by Evan Martin.
+
 Fri Nov 17 20:14:20 2000  Owen Taylor  <otaylor@redhat.com>
 
         * Released 1.3.2
